# php-config-transofrmer

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/: config.local.inc  config.site.inc
